@@ -105,8 +105,9 @@ table tr th:last-child,table tr td:last-child{border-right:1px solid #adcb83}
 .content-page dd{margin:9px 0 9px 18px}
 .content-page dd,.content-page dt,.content-page p,.content-page article>pre,.content-page table{font-size:14px;line-height:18px;margin-bottom:18px;min-width:400px}
 .content-page ol li,.content-page ul li{margin-left:30px}
-.content-page p,.content-page .page-header{margin-bottom:18px;margin-top:0}
+.content-page p,.content-page .page-header{margin-bottom:18px;margin-top:0;min-width:320px}
 .content-page .folder-link>span{clear:left;float:left}
+.content-page .page-header{border-bottom:1px solid;border-color:#adcb83;margin-left:0;margin-right:0;min-width:400px;overflow:hidden;padding:9px 0 8px 0}
 .dialog{background-color:#f5f5f6;border:1px solid;border-color:#adcb83;-khtml-border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-moz-box-shadow:0 5px 5px rgba(0,0,0,0.25);-webkit-box-shadow:0 5px 5px rgba(0,0,0,0.25);box-shadow:0 5px 5px rgba(0,0,0,0.25);max-width:50%;padding:8px}
 .dialog-body{position:relative}
 .dialog-body form{vertical-align:middle}
@@ -167,7 +168,6 @@ table tr th:last-child,table tr td:last-child{border-right:1px solid #adcb83}
 .nav.nav-list li ul li.active a{color:#000}
 .nav.nav-list .tips{display:block}
 .offset1{margin-left:8%}
-.page-header{border-bottom:1px solid;border-color:#adcb83;margin:0;min-width:400px;overflow:hidden;padding:9px 0 8px 0}
 .page-header .container{clear:both}
 .page-header h1{margin:9px 0}
 .pathname{border:2px inset;-khtml-border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-khtml-box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;font-size:15px;line-height:18px;margin:4px 0;min-width:400px;padding:3px 7px;vertical-align:middle}
@@ -212,7 +212,7 @@ table tr th:last-child,table tr td:last-child{border-right:1px solid #adcb83}
 .well.well-sidebar a,.well.well-sidebar button{color:#569220;font-size:14px;line-height:18px;font-weight:400;font-family:"Roboto Slab","Times New Roman","Times","serif"}
 .well.well-sidebar a:hover{text-decoration:none}
 .well.well-sidebar .twitter hr{border-bottom:none;margin-left:-20px;margin-right:-20px}
-@media only screen and (max-width:820px){table,thead,tbody,th,td,tr{border:none;display:block} thead tr{left:-9999px;position:absolute;top:-9999px} tr{border-bottom:2px solid #adcb83;margin-bottom:10px} tr td,tr th{border:1px solid #adcb83;border-bottom:none} td{border:none;border-bottom:1px solid #adcb83;padding-left:50% !important;position:relative;white-space:normal;text-align:left} td:before{font-weight:bold;left:6px;padding-right:10px;position:absolute;text-align:left;top:6px;white-space:nowrap;width:45%} td:before{content:attr(data-title)}}@media (max-width:820px){body{overflow-y:scroll} .collapse.in{display:none} .columns .left-column,.columns .right-column{height:auto;padding-top:0;width:100% !important} .columns .right-column .content-page{padding-right:220px !important} .hero-buttons.container-fluid .btn-hero.btn{display:block;margin-bottom:10px} .homepage-hero{padding-top:0 !important} .homepage-content.container-fluid{padding:40px 20px} .homepage-footer.container-fluid{padding:0 20px} .responsive-collapse{display:block !important}}@media (min-width:820px){.content-page article{max-width:600px}}@media (max-width:1149px){.pod>div{overflow:hidden;position:relative}}@media (min-width:1150px){.float-view .content-page{background-color:transparent !important;height:100%;padding:0 !important} .float-view .content-page article{border-left:18px solid #fff;max-width:100% !important;min-height:100%;overflow:auto;position:relative} .float-view .content-page article:before{background-color:#fff;content:'';display:block;margin:0;min-height:100%;min-width:400px;overflow:auto;position:absolute;width:55%;z-index:-1} .float-view .content-page blockquote{clear:both;display:inline-block;float:left;overflow:hidden;width:48%} .float-view .content-page blockquote p{clear:none;float:none;margin-bottom:18px;min-width:328px;width:auto} .float-view .content-page blockquote:before{clear:both;content:'';display:block;height:18px;width:auto} .float-view .content-page hr{border-color:#adcb83;clear:left;float:left;width:50%} .float-view .content-page ol li,.float-view .content-page ul li{clear:left;float:left} .float-view .content-page ol li p,.float-view .content-page ul li p{background-color:#fff;clear:right;float:left;margin-left:18px;margin-right:18px;width:auto} .float-view .content-page ol li pre,.float-view .content-page ul li pre{-khtml-box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;clear:left;float:left;margin-right:18px;width:auto} .float-view .content-page p,.float-view .content-page .page-header{clear:left;float:left;min-width:400px;padding-right:18px;width:55%} .float-view .content-page p.toplink{background-color:transparent;margin-bottom:0;margin-top:-23px;text-align:right} .float-view .content-page>article>pre{border:none;border-left:5px solid #881102;clear:right;float:left;margin:0 0 9px 0} .float-view .content-page table{background-color:#fff;clear:left;float:left;margin-left:18px;margin-right:18px;white-space:normal;max-width:50%} .float-view .content-page table pre,.float-view .content-page table code{white-space:normal} .float-view .content-page dl,.float-view .content-page ol,.float-view .content-page ul,.float-view .content-page h2,.float-view .content-page h3,.float-view .content-page h4,.float-view .content-page h5,.float-view .content-page h6{clear:left;float:left;min-width:400px;padding-right:18px;width:55%} .float-view .content-page .page-header:before,.float-view .content-page ul:before,.float-view .content-page ol:before,.float-view .content-page dl:before,.float-view .content-page h2:before,.float-view .content-page h3:before,.float-view .content-page h4:before,.float-view .content-page h5:before,.float-view .content-page h6:before{clear:both;content:'';display:block;height:9px;width:auto} .float-view .content-page .pod,.float-view .content-page .pod pre{clear:both;float:left;position:relative}}@media (min-width:1200px){.columns .right-column.span9{width:76.8866339334%}}.flag_da{background:url(../img/flags.png) no-repeat 0 0;display:block;height:24px;padding:0 0 0 32px}
+@media only screen and (max-width:820px){table,thead,tbody,th,td,tr{border:none;display:block} thead tr{left:-9999px;position:absolute;top:-9999px} tr{border-bottom:2px solid #adcb83;margin-bottom:10px} tr td,tr th{border:1px solid #adcb83;border-bottom:none} td{border:none;border-bottom:1px solid #adcb83;padding-left:50% !important;position:relative;white-space:normal;text-align:left} td:before{font-weight:bold;left:6px;padding-right:10px;position:absolute;text-align:left;top:6px;white-space:nowrap;width:45%} td:before{content:attr(data-title)}}@media (max-width:820px){body{overflow-y:scroll} .collapse.in{display:none} .columns .left-column,.columns .right-column{height:auto;padding-top:0;width:100% !important} .columns .right-column .content-page{padding-right:220px !important} .hero-buttons.container-fluid .btn-hero.btn{display:block;margin-bottom:10px} .homepage-hero{padding-top:0 !important} .homepage-content.container-fluid{padding:40px 20px} .homepage-footer.container-fluid{padding:0 20px} .responsive-collapse{display:block !important}}@media (min-width:820px){.content-page article{max-width:600px}}@media (max-width:1149px){.pod>div{overflow:hidden;position:relative}}@media (min-width:1150px){.float-view .content-page{background-color:transparent !important;height:100%;padding:0 !important} .float-view .content-page article{border-left:18px solid #fff;max-width:100% !important;min-height:100%;overflow:auto;position:relative} .float-view .content-page article:before{background-color:#fff;content:'';display:block;margin:0;min-height:100%;min-width:560px;overflow:auto;position:absolute;width:55%;z-index:-1} .float-view .content-page blockquote{clear:both;display:inline-block;float:left;overflow:hidden;width:48%} .float-view .content-page blockquote p{clear:none;float:none;margin-bottom:18px;min-width:328px;width:auto} .float-view .content-page blockquote:before{clear:both;content:'';display:block;height:18px;width:auto} .float-view .content-page hr{border-color:#adcb83;clear:left;float:left;width:50%} .float-view .content-page ol li,.float-view .content-page ul li{clear:left;float:left} .float-view .content-page ol li p,.float-view .content-page ul li p{background-color:#fff;clear:right;float:left;margin-left:18px;margin-right:18px;min-width:400px;width:auto} .float-view .content-page ol li pre,.float-view .content-page ul li pre{-khtml-box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;clear:left;float:left;margin-right:18px;width:auto} .float-view .content-page p,.float-view .content-page .page-header{clear:left;float:left;min-width:560px;padding-right:18px;width:55%} .float-view .content-page p.toplink{background-color:transparent;margin-bottom:0;margin-top:-23px;text-align:right} .float-view .content-page>article>pre{border:none;border-left:5px solid #881102;clear:right;float:left;margin:0 0 9px 0} .float-view .content-page table{background-color:#fff;clear:left;float:left;margin-left:18px;margin-right:18px;white-space:normal;max-width:50%} .float-view .content-page table pre,.float-view .content-page table code{white-space:normal} .float-view .content-page dl,.float-view .content-page ol,.float-view .content-page ul,.float-view .content-page h2,.float-view .content-page h3,.float-view .content-page h4,.float-view .content-page h5,.float-view .content-page h6{clear:left;float:left;min-width:560px;padding-right:18px;width:55%} .float-view .content-page .page-header:before,.float-view .content-page ul:before,.float-view .content-page ol:before,.float-view .content-page dl:before,.float-view .content-page h2:before,.float-view .content-page h3:before,.float-view .content-page h4:before,.float-view .content-page h5:before,.float-view .content-page h6:before{clear:both;content:'';display:block;height:9px;width:auto} .float-view .content-page .pod,.float-view .content-page .pod pre{clear:both;float:left;position:relative}}@media (min-width:1200px){.columns .right-column.span9{width:76.8866339334%}}.flag_da{background:url(../img/flags.png) no-repeat 0 0;display:block;height:24px;padding:0 0 0 32px}
 .flag_de{background:url(../img/flags.png) no-repeat 0 -24px;display:block;height:24px;padding:0 0 0 32px}
 .flag_en{background:url(../img/flags.png) no-repeat 0 -48px;display:block;height:24px;padding:0 0 0 32px}
 .flag_fi{background:url(../img/flags.png) no-repeat 0 -72px;display:block;height:24px;padding:0 0 0 32px}
